# test_kind

./: Cargo.toml  README.md  check-all.sh
.github/workflows/: build-test.yml  rust-clippy.yml
crate/: Cargo.toml
crate/src/: attribute_kind.rs  config.rs  lib.rs  unit_age.rs
crate/tests/: integration.rs  other.rs  unit.rs
src/: config.rs  unit_age.rs
